[package]
name = "bpf-testing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
bpf-testing-common = { path = "../bpf-testing-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "io-std", "io-util"] }
tun-tap = "0.1.3"
nix = "0.26.1"

[[bin]]
name = "bpf-testing"
path = "src/main.rs"
